Adds user flow from and to introduction activity

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     tools:context="com.d24.android.pictogramapp.IntroActivity">
 
-    <include layout="@layout/content_main"/>
+    <include layout="@layout/content_intro"/>
 
 </android.support.design.widget.CoordinatorLayout>
