--- a/app/src/main/res/layout/activity_staging.xml
+++ b/app/src/main/res/layout/activity_staging.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0099cc"
-             tools:context="com.d24.android.pictogramapp.StagingActivity">
+             tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
