--- a/app/src/main/res/layout/fragment_stage_editing.xml
+++ b/app/src/main/res/layout/fragment_stage_editing.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/view_root"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-        <LinearLayout
-                android:id="@+id/fullscreen_content_controls"
-                style="?metaButtonBarStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
-                android:background="@color/black_overlay"
-                android:orientation="horizontal"
-                tools:ignore="UselessParent">
+                android:layout_height="match_parent"
+                android:background="#0099cc"
+                tools:context="com.d24.android.pictogramapp.StagingActivity">
+
+
 
                 <Button
-                    android:id="@+id/dummy_button"
-                    style="?metaButtonBarButtonStyle"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/dummy_button"/>
+                    android:text="@string/button_label_stage"
+                    android:id="@+id/selectButton"
+                    android:onClick="selectClick"
+                    android:layout_marginTop="36dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"/>
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/fullscreen_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:keepScreenOn="true"
+                    android:src="@drawable/pm_figures_004_halo_head"/>
+
+
+
+
+
 </RelativeLayout>
