--- a/app/src/main/res/layout/activity_staging.xml
+++ b/app/src/main/res/layout/activity_staging.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -19,9 +19,9 @@
     </FrameLayout>
     <FrameLayout
         android:id="@+id/fragment_selection"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:clickable="true"
         android:layout_below="@+id/fragment_editing"
         android:background="#FF4081" >
@@ -35,4 +35,4 @@
 
 
 
-</RelativeLayout>
+</FrameLayout>
