--- a/app/src/main/res/layout/activity_staging.xml
+++ b/app/src/main/res/layout/activity_staging.xml
@@ -17,22 +17,16 @@
 
 
     </FrameLayout>
+
     <FrameLayout
         android:id="@+id/fragment_selection"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_alignParentBottom="true"
-        android:clickable="true"
-        android:layout_below="@+id/fragment_editing"
-        android:background="#FF4081" >
+        android:layout_gravity="bottom"
+        android:background="#FF4081"
+        android:clickable="true">
 
     </FrameLayout>
-
-
-
-
-
-
 
 
 </FrameLayout>
