--- a/app/src/main/res/layout/activity_staging.xml
+++ b/app/src/main/res/layout/activity_staging.xml
@@ -3,6 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0099cc"
+             android:id="@+id/frameLayout"
              tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
 
 
