removed dummy image in branch

--- a/app/src/main/res/layout/fragment_stage_editing.xml
+++ b/app/src/main/res/layout/fragment_stage_editing.xml
@@ -5,7 +5,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#0099cc"
-                tools:context="com.d24.android.pictogramapp.StagingActivity">
+                tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
 
 
 
@@ -19,13 +19,6 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"/>
 
-                <ImageView
-                    android:id="@+id/fullscreen_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:keepScreenOn="true"
-                    android:src="@drawable/pm_figures_004_halo_head"/>
 
 
 
