--- a/app/src/main/res/layout/fragment_pictogram_select.xml
+++ b/app/src/main/res/layout/fragment_pictogram_select.xml
@@ -3,17 +3,20 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="200dp"
+                android:layout_gravity="bottom"
+                android:background="#FF4081"
+                android:clickable="true">
+
     <GridView
         android:id="@+id/gridView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:columnWidth="90dp"
+        android:columnWidth="60dp"
         android:numColumns="auto_fit"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
-        android:gravity="center"
-        />
+        android:gravity="center"/>
 
 </RelativeLayout>
