--- a/app/src/main/res/layout/fragment_stage_editing.xml
+++ b/app/src/main/res/layout/fragment_stage_editing.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/canvasView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#0099cc"
                 tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
 
-</RelativeLayout>
+</FrameLayout>
