--- a/app/src/main/res/layout/fragment_background_picker.xml
+++ b/app/src/main/res/layout/fragment_background_picker.xml
@@ -2,11 +2,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="250dp"
     android:layout_gravity="bottom"
     android:background="@color/blue_grey_100"
     android:clickable="true"
     tools:context="com.d24.android.pictogramapp.ui.BackgroundPickerFragment">
+
+    <GridView
+        android:id="@+id/grid_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="10dp"
+        android:columnWidth="60dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="2dp"
+        android:horizontalSpacing="2dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"/>
+
+
+<!-- OLD VERSION, remove?
 
     <GridView
         android:id="@+id/grid_background"
@@ -17,5 +32,6 @@
         android:horizontalSpacing="2dp"
         android:stretchMode="columnWidth"
         android:gravity="center"/>
+!-->
 
 </FrameLayout>
