--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -2,12 +2,12 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
-              android:background="#0099cc"
               android:orientation="vertical"
               android:padding="5dp">
 
     <ImageView
         android:id="@+id/image"
+        android:background="@color/light_blue_100"
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
