--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,24 @@
     <color name="brown_100">#D7CCC8</color>
     <color name="grey_200">#EEEEEE</color>
     <color name="blue_grey_100">#CFD8DC</color>
+    <color name="red_500">#F44336</color>
+    <color name="pink_500">#E91E63</color>
+    <color name="purple_500">#9C27B0</color>
+    <color name="deep_purple_500">#673AB7</color>
+    <color name="indigo_500">#3F51B5</color>
+    <color name="blue_500">#2196F3</color>
+    <color name="light_blue_500">#03A9F4</color>
+    <color name="cyan_500">#00BCD4</color>
+    <color name="teal_500">#009688</color>
+    <color name="green_500">#4CAF50</color>
+    <color name="light_green_500">#8BC34A</color>
+    <color name="lime_500">#CDDC39</color>
+    <color name="yellow_500">#FFEB3B</color>
+    <color name="amber_500">#FFC107</color>
+    <color name="orange_500">#FF9800</color>
+    <color name="deep_orange_500">#FF5722</color>
+    <color name="brown_500">#795548</color>
+    <color name="grey_500">#9E9E9E</color>
+    <color name="blue_grey_500">#607D8B</color>
     <color name="white">#FFFFFF</color>
 </resources>
