--- a/app/src/main/res/layout/fragment_stage_editing.xml
+++ b/app/src/main/res/layout/fragment_stage_editing.xml
@@ -4,6 +4,17 @@
                 android:id="@+id/canvasView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
+                android:layout_gravity="center"
 
+             tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
+
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        tools:text="test"/>
 </FrameLayout>
