--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dialog_margin">16dp</dimen>
+    <dimen name="canvas_margin">24dp</dimen>
 </resources>
