Replace fragments with views in ViewPager, apply color changes to pictograms as well

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -125,5 +125,6 @@
         <item>@color/grey_500</item>
         <item>@color/blue_grey_500</item>
         <item>@color/white</item>
+        <item>@color/black</item>
     </integer-array>
 </resources>
