--- a/app/src/main/res/layout/layout_layer.xml
+++ b/app/src/main/res/layout/layout_layer.xml
@@ -6,12 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/canvas_margin"
-    card_view:cardElevation="8dp">
+    card_view:cardElevation="@dimen/canvas_elevation">
 
     <com.d24.android.pictogramapp.ui.LayerLayout
         android:id="@+id/layer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:onClick="onCanvasPressed"
         tools:context=".ui.LayerLayout"/>
 
 </android.support.v7.widget.CardView>
