--- a/app/src/main/res/menu/menu_staging.xml
+++ b/app/src/main/res/menu/menu_staging.xml
@@ -4,14 +4,14 @@
       tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
 
     <item
-        android:id="@+id/action_pictogram"
+        android:id="@+id/action_add_figure"
         android:icon="@drawable/ic_add_circle_black_24dp"
         android:title="@string/button_add"
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/action_background"
-        android:icon="@drawable/ic_image_black_24dp"
+        android:id="@+id/action_color"
+        android:icon="@drawable/ic_color_lens_black_24dp"
         android:title="@string/button_background"
         app:showAsAction="always"/>
 
@@ -26,10 +26,23 @@
         android:icon="@drawable/ic_redo_black_24dp"
         android:title="@string/button_redo"
         app:showAsAction="always"/>
+
     <item
         android:id="@+id/action_save"
         android:icon="@drawable/ic_save_black_24dp"
         android:title="@string/button_save"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_add_page"
+        android:orderInCategory="100"
+        android:title="@string/action_add_page"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_remove_page"
+        android:orderInCategory="100"
+        android:title="@string/action_remove_page"
+        app:showAsAction="never"/>
 
 </menu>
