--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,4 +46,5 @@
     <color name="grey_500">#9E9E9E</color>
     <color name="blue_grey_500">#607D8B</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
