--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dialog_margin">16dp</dimen>
     <dimen name="canvas_margin">24dp</dimen>
+    <dimen name="canvas_elevation">8dp</dimen>
 </resources>
