--- a/app/src/main/res/menu/menu_staging.xml
+++ b/app/src/main/res/menu/menu_staging.xml
@@ -19,19 +19,19 @@
         android:id="@+id/action_undo"
         android:icon="@drawable/ic_undo_black_24dp"
         android:title="@string/button_undo"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_redo"
         android:icon="@drawable/ic_redo_black_24dp"
         android:title="@string/button_redo"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_save"
         android:icon="@drawable/ic_save_black_24dp"
         android:title="@string/button_save"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_add_page"
