--- a/app/src/main/res/layout/activity_staging.xml
+++ b/app/src/main/res/layout/activity_staging.xml
@@ -7,7 +7,7 @@
     android:id="@+id/frame_layout"
     tools:context="com.d24.android.pictogramapp.ui.StagingActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.d24.android.pictogramapp.util.CustomViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
