--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add"
-        app:backgroundTint="?attr/colorButtonNormal"
+        app:backgroundTint="@color/colorButtonForeground"
         android:tint="@color/colorPrimary"/>
 
 </android.support.design.widget.CoordinatorLayout>
