--- a/app/src/main/res/layout/list_item_file.xml
+++ b/app/src/main/res/layout/list_item_file.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
-              android:minHeight="?attr/listPreferredItemHeight"
+              android:minHeight="72dp"
               android:paddingStart="?attr/listPreferredItemPaddingLeft"
               android:paddingEnd="?attr/listPreferredItemPaddingRight">
 
@@ -16,11 +16,13 @@
         <TextView android:id="@+id/text1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
+                  android:textSize="16sp"
                   android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView android:id="@+id/text2"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
+                  android:textSize="14sp"
                   android:textAppearance="?attr/textAppearanceListItemSmall"
                   android:alpha="0.5" />
 
@@ -31,8 +33,9 @@
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
-               android:padding="7dp"
+               android:padding="6dp"
                android:src="@drawable/ic_edit_black_24dp"
+               android:tint="@color/colorButtonBackground"
                android:contentDescription="@string/content_edit" />
 
     <ImageView android:id="@+id/delete"
@@ -40,8 +43,9 @@
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
-               android:padding="7dp"
+               android:padding="6dp"
                android:src="@drawable/ic_close_black_24dp"
+               android:tint="@color/colorButtonBackground"
                android:contentDescription="@string/content_delete" />
 
 </LinearLayout>
