--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#E91E63</color>
+    <color name="colorPrimaryDark">#C2185B</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorButtonForeground">#808080</color>
+    <color name="colorButtonForeground">#EEEEEE</color>
+    <color name="colorButtonBackground">#616161</color>
 
     <color name="black_overlay">#66000000</color>
 
