Add various improvements - Dismiss fragments when clicking respective button again - Dismiss fragments when saving - Fixed edit and delete buttons in MainActivity - Inverted colors of floating action button

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
         android:id="@+id/list_files"
         android:animateLayoutChanges="true"
         android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay"
         android:paddingBottom="88dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
