--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.d24.android.pictogramapp.ui.MainActivity">
@@ -31,7 +32,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add"
-        app:backgroundTint="@color/colorButtonForeground"
-        android:tint="@color/colorPrimary"/>
+        app:backgroundTint="@color/colorPrimary"
+        android:tint="@color/colorButtonForeground"/>
 
 </android.support.design.widget.CoordinatorLayout>
